# immune-crystal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  demo_video_script.md  docker-compose.yml  pyproject.toml  whitepaper.md
.github/workflows/: ci.yml
api/: app.py  deps.py  schemas.py
api/routes/: __init__.py  audit.py  chat.py  crystal.py  inject.py
assets/demo/: README.md
assets/screenshots/: README.md
benchmarks/: audit_latency.py  memory_repair.py  pollution_intercept.py
case_studies/: finance.md  medical.md
core/: __init__.py  models.py  service.py
core/audit/: __init__.py  logger.py  purity.py  tracer.py
core/crystal/: __init__.py  fourier.py  oscillator.py  phase.py  scheduler.py
core/detector/: __init__.py  conflict_nli.py  cross_domain.py  drift.py
core/domain/: __init__.py  registry.py
core/immune/: __init__.py  antibody.py  b_cell.py  repertoire.py  t_cell.py
core/llm/: __init__.py  api_backend.py  base.py  qwen_local.py
core/memory/: decay.py  reinforcer.py  store.py
docker/: api.Dockerfile
docs/: enterprise-evaluation.md
examples/finance/: loan_conflict.py
examples/generic/: bootstrap_and_chat.py
examples/medical/: cross_domain_poison.py
scripts/: generate_demo_gif.py
web/: package-lock.json  package.json
web/src/: main.tsx  style.css
