[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immune-crystal"
version = "0.1.0"
description = "Enterprise AI immune-memory symbiote with pollution defense and periodic memory self-repair."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "numpy>=1.26.0",
  "apscheduler>=3.10.4",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0",
  "transformers>=4.45.0",
  "torch>=2.3.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0", "ruff>=0.6.0", "pillow>=10.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"
